27_matrix_input/grade.txt
Grading at Mon Mar 11 17:39:13 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:80:16: error: expected ‘)’ before ‘;’ token
   rotate(matrix;)
                ^
rotateMatrix.c:81:5: error: expected ‘;’ before ‘for’
     for (int r=0; r<MATRIX_DIM; r++) {
     ^
The code did not compile!

Overall Grade: F
